$Id: ChangeLog,v 1.121 2005/04/25 21:13:33 manuelbi Exp $

2005-05-13 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added socket support (enable it by uncommenting line 82 of 
	   openMSXController.cpp)
	* Replaced bitmaps with png's and removed the masking code.

2005-04-25 Manuel Bilderbeek <manuel@msxnet.org>
	* Added EXPERIMENTAL AND UNTESTED build support for the following CPUs.
	  DEC Alpha, ARM, HP PA-RISC, IA-64, Motorola 680x0, MIPS (Big and
	  Little Endian), IBM S/390.
	  Everything should work (endianness is OK), but we have no systems to
	  test on. Let's wait until someone complains that it doesn't work and
	  then fix it (if needed at all).

2005-03-05 Maarten ter Huurne <maarten@treewalker.org>
	* Released openmsx-catapult-0.5.1-R1.

2005-03-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Control groups are now disabled if all controls in that group are.
	* Cassette is no longer first disabled and then enabled.
	* Fixed disk sometimes not getting changed when selected from history

2005-03-01 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Romtypes are now saved/restored for all roms in the history
	* Doubleclick in the RomTypeDialog works now

2005-02-09 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed a crash in the 'type' command.
	* Remove rich edit flag of the input page

2005-02-08 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed the 'type' command.

2005-02-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When selecting Disk IPS while openMSX is running, it's now applied
	* Last used IPS path is now remembered
	* Max Speed doesn't set speed to 500 anymore. This gave too much
	  problems

2005-02-03 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed updating the popup menu's for mapper and ips
	* Restricted the history to 25 items (hardcoded for now)

2005-01-31 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fix IPS and mapper support
	* Added multiple IPS and disk IPS.

2005-01-26 Herman Oudejans <hn.oudejans@quicknet.nl>