@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.121 2005/04/25 21:13:33 manuelbi Exp $
+$Id: ChangeLog,v 1.122 2005/05/13 14:10:57 h_oudejans Exp $
+
+2005-05-14 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* Fixed rensha turbo update problem
+	* Fixed missing backslashes with printer log file
+	* Fixed pressing F10 (menu) before openMSX shows its screen	
 
 2005-05-13 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Added socket support (enable it by uncommenting line 82 of 
